2001-05-28  Christian Ruppert <arc@gmx.li>

	* uwm/winmenu.c: changed global variables name from x1 to hexX and from
	  y1 to hexY.
	* uwm/winmenu.c: changed pointer warping to be done after pointer
	  grabbing in StartWinMenu.
	* uwm/winmenu.c: changed pointer ungrabbing to be done after warping
	  back the pointer.

2001-05-26  Christian Ruppert <arc@gmx.li>

	* uwm/menu.c: changed SelectItem syntax (added state argument)

2001-05-25  Christian Ruppert <arc@gmx.li>

	* uwm/uwm.h: added ButtonCount
	* uwm/winmenu.c: removed Buttoncount variable and replaced it by
	  ButtonCount macro
	* uwm/resize.c: replaced Buttoncount variable by ButtonCount macro
	* uwm/menu.c: replaced Buttoncount variable by ButtonCount macro
	* uwm/menu.h: changed prototypes
	* uwm/placement.c: removed Buttoncount variable handling
	* uwm/applications.c, uwm/menu.c, umw/uwmmenu.c, uwm/windows.c,
	  wum/winmenumenu.c: changed StartMenu syntax (removed mousestarted)

2001-05-09  Christian Ruppert <arc@gmx.li>

	* uwm/windows.c: a small bugfix that unmaps border wins of shaped
	  windows again in case win is mapped

2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/special.c: included urm.h for SetResourceDB prototype
	* uwm/windows.c: small bugfix initializing originalvalues in
	  MoveResizeWin() and removed some unused variables.
	* uwm/handlers.c: removed some unused variables and did some code
	  formating
	* uwm/properties.c: included widgets.h for DrawTitle prototype and
	  special.h for SendWMProtocols prototype
	* uwm/init.c: removed unused variables and did some code reformating
	* uwm/urm.c: included ctype.h and X11/Xmu/SysUtil.h for some prototypes
	  and removed an unused variable
	* uwm/workspaces.c: included urm.h for SetResourceDB
	* uwm/windows.h: added missing prototype for DrawWinBorder
	* uwm/pix.c: removed some unused variables and corrected a bug related
	  to local variables and longjmp
	* uwm/wingroups.c: removed an unused variable